updated vinyl GUI

--- a/iMusicMidterm/index.html
+++ b/iMusicMidterm/index.html
@@ -31,28 +31,17 @@
 		/*workaround for some mobile browsers*/
 		background-size: cover;
 		}
+		.hide {
+			display: none;
+		}
 
 		</style>
 	</head>
 	<body>
 
-
-		<div>
-				vinyl {
-    	position: absolute;
-    	left: 100px;
-    	top: 100px;
-    	/*z-index: -1;*/
-			}	
-		</div>
-
-		<canvas nx="vinyl"></canvas>
-		<script type="text/javascript">
-
-		
-
-		</script>
+		<canvas nx="vinyl" class="hide"></canvas>
 		<canvas nx="vinyl" height="450" width="450"></canvas>
+		<!-- <canvas nx="matrix" id="beatmatrix5"></canvas> -->
 	</body>
 </html>
 
