--- a/iMusicMidterm/index.html
+++ b/iMusicMidterm/index.html
@@ -31,8 +31,14 @@
 		/*workaround for some mobile browsers*/
 		background-size: cover;
 		}
+
 		.hide {
 			display: none;
+		}
+
+		.leftCanvas{
+			padding: 0;
+			margin-left:calc(50% - 450px);
 		}
 
 		</style>
@@ -40,7 +46,10 @@
 	<body>
 
 		<canvas nx="vinyl" class="hide"></canvas>
-		<canvas nx="vinyl" height="450" width="450"></canvas>
+		<div class="leftCanvas">
+			<canvas nx="vinyl" height="450" width="450"></canvas>
+			<canvas nx="vinyl" height="450" width="450"></canvas>
+		</div>
 		<!-- <canvas nx="matrix" id="beatmatrix5"></canvas> -->
 	</body>
 </html>
